Added header and linked naviagtion bar css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Social Media Meta Tags (Open Graph for Facebook, LinkedIn, etc.) -->
 <!--     <meta property="og:title" content="Your Page Title"> -->
 <!--     <meta property="og:description" content="Description of your webpage for social sharing."> -->
-<!--     <meta property="og:image" content="https://www.yourwebsite.com/image.jpg"> <!-- Link to an image --> -->
+<!--     <meta property="og:image" content="https://www.yourwebsite.com/image.jpg"> -->
 <!--     <meta property="og:url" content="https://www.yourwebsite.com"> -->
 <!--     <meta property="og:type" content="website"> -->
 
@@ -32,6 +32,7 @@
     <!-- Link to CSS -->
     <link rel="stylesheet" href="style.css">
     <!-- Link to Navigation Bar CSS -->
+    <link rel="stylesheet" href="Main_Navigation_Bar.css">
 
     <!-- Google Fonts Icons-Static -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
@@ -40,5 +41,266 @@
     <title>Learn Computer Science - Study Plan To Follow For Becoming A Computer Scientist</title>
   </head>
 
-  <body></body>
+  <body>
+    <header>
+      <nav id="Main_Navigation_Bar">
+        <div id="MNB_LogoBox">
+          <img src="https://vsr-arcore.github.io/Computers-Study/ARCORE-LOGO-1.webp" alt="Main Navigation Bar Logo" style="width: 60px; height: 60px; border-radius: 50%;" />
+        </div>
+
+        <div id="MNB_TitleBox">
+          <span>Learn Computer Science</span>
+          <span>Study Plan</span>
+        </div>
+
+        <div id="MNB_MenuBox">
+          <div class="MNB_Menu">
+            <span>Home</span>
+          </div>
+          <div class="MNB_Menu">
+            <span>Notes</span>
+            <div class="MNB_Menu_SubMenu">
+            <span class="material-symbols-outlined MNB_DropdownIcon">
+              arrow_drop_down
+            </span>
+            <ul class="MNB_SubMenuBox">
+              <li class="MNB_SubMenuMain">
+                <a href="#">All Notes <span class="material-symbols-outlined" style="font-size: 1em;">
+                  open_in_new
+                  </span></a>
+              </li>
+              <ul class="MNB_SubMenuP1 MNB_SubMenuP">
+                <li>Trending Topics</li>
+                <li><a href="#">Artificial Intelligence <span class="material-symbols-outlined" style="font-size: 1em;">
+                link
+                </span></a></li>
+                <li><a href="#">Python <span class="material-symbols-outlined" style="font-size: 1em;">
+                link
+                </span></a></li>
+                <li><a href="#">Rust <span class="material-symbols-outlined" style="font-size: 1em;">
+                link
+                </span></a></li>
+                <!-- <li><a href="#"></a></li> -->
+              </ul>
+              <ul class="MNB_SubMenuP2 MNB_SubMenuP">
+                <li>Important Topics</li>
+                <li><a href="#">Web Development <span class="material-symbols-outlined" style="font-size: 1em;">
+                link
+                </span></a></li>
+                <li><a href="#">Cyber Security <span class="material-symbols-outlined" style="font-size: 1em;">
+                link
+                </span></a></li>
+                <li><a href="#">Game Development <span class="material-symbols-outlined" style="font-size: 1em;">
+                link
+                </span></a></li>
+                <li><a href="#">Programming Languages <span class="material-symbols-outlined" style="font-size: 1em;">
+                link
+                </span></a></li>
+              </ul>
+            </ul>
+              </div>
+          </div>
+          <div class="MNB_Menu">
+            <span>Resources</span>
+            <div class="MNB_Menu_SubMenu">
+            <span class="material-symbols-outlined MNB_DropdownIcon">
+            arrow_drop_down
+            </span>
+            <ul class="MNB_SubMenuBox">
+              <li class="MNB_SubMenuMain">
+                <a href="#">All Resources <span class="material-symbols-outlined" style="font-size: 1em;">
+                  open_in_new
+                  </span></a>
+              </li>
+              <ul class="MNB_SubMenuP1 MNB_SubMenuP">
+                <li>Arcore Resources</li>
+                <li><a href="#">Notes <span class="material-symbols-outlined" style="font-size: 1em;">
+                link
+                </span></a></li>
+                <li><a href="#">eBooks <span class="material-symbols-outlined" style="font-size: 1em;">
+                link
+                </span></a></li>
+                <li><a href="#">Projects <span class="material-symbols-outlined" style="font-size: 1em;">
+                link
+                </span></a></li>
+              </ul>
+              <ul class="MNB_SubMenuP2 MNB_SubMenuP">
+                <li>External Resources</li>
+                <li><a href="#">GUVI - Learning Application <span class="material-symbols-outlined" style="font-size: 1em;">
+                link
+                </span></a></li>
+                <li><a href="#">W3Schools - Learning Website <span class="material-symbols-outlined" style="font-size: 1em;">
+                link
+                </span></a></li>
+              </ul>
+            </ul>
+          </div>
+            </div>
+          <div class="MNB_Menu">
+            <span>Explore</span>
+            <div class="MNB_Menu_SubMenu">
+            <span class="material-symbols-outlined MNB_DropdownIcon">
+            arrow_drop_down
+            </span>
+            <ul class="MNB_SubMenuBox">
+              <li class="MNB_SubMenuMain">
+                <a href="#">Arcore And MANAGE <span class="material-symbols-outlined" style="font-size: 1em;">
+                  open_in_new
+                  </span></a>
+              </li>
+              <ul class="MNB_SubMenuP1 MNB_SubMenuP">
+                <li>Arcore</li>
+                <li><a href="#">Projects under Arcore <span class="material-symbols-outlined" style="font-size: 1em;">
+                link
+                </span></a></li>
+                <li><a href="#">Owner of Arcore <span class="material-symbols-outlined" style="font-size: 1em;">
+                link
+                </span></a></li>
+              </ul>
+              <ul class="MNB_SubMenuP2 MNB_SubMenuP">
+                <li>MANAGE</li>
+                <li><a href="#">Projects under MANAGE <span class="material-symbols-outlined" style="font-size: 1em;">
+                link
+                </span></a></li>
+                <li><a href="#">Owner of MANAGE <span class="material-symbols-outlined" style="font-size: 1em;">
+                link
+                </span></a></li>
+              </ul>
+            </ul>
+              </div>
+          </div>
+        </div>
+
+        <div id="MNB_ButtonBox">
+          <button>BLOG</button>
+        </div>
+
+        <div id="MNB_MenuButtonBox" onclick="AnimateMenuBars(this)">
+          <div class="Menu_Bar1"></div>
+          <div class="Menu_Bar2"></div>
+          <div class="Menu_Bar3"></div>
+        </div>
+
+        <div id="MNB_SideNavigation">
+          <div id="MNBSN_MenuBox">
+            <div class="MNBSN_Menu">
+              <a href="#">Home <span class="material-symbols-outlined" style="font-size: 1em;">
+              home
+              </span></a>
+            </div>            
+            <div class="MNBSN_Menu">
+              <div class="MNBSN_SubMenuBoxToggler" onclick="toggleSideNavigationSubMenu(this);">
+              <span>Notes</span>
+              <span class="material-symbols-outlined MNBSN_DropdownIcon">
+                arrow_drop_down
+                </span>
+              </div>
+              <div class="MNBSN_SubMenuBox">
+                <a href="#">All Notes <span class="material-symbols-outlined" style="font-size: 1em;">
+                  open_in_new
+                  </span></a>
+                <ul class="MNBSN_SubMenuP1 MNBSN_SubMenuP">
+                  <li>Trending Topics</li>
+                    <li><a href="#">Artificial Intelligence <span class="material-symbols-outlined" style="font-size: 1em;">
+                      link
+                      </span></a></li>
+                  <li><a href="#">Python <span class="material-symbols-outlined" style="font-size: 1em;">
+                    link
+                    </span></a></li>
+                  <li><a href="#">Rust <span class="material-symbols-outlined" style="font-size: 1em;">
+                    link
+                    </span></a></li>
+                </ul>
+                <ul class="MNBSN_SubMenuP2 MNBSN_SubMenuP">
+                  <li>Important Topics</li>
+                    <li><a href="#">Web Development <span class="material-symbols-outlined" style="font-size: 1em;">
+                      link
+                      </span></a></li>
+                  <li><a href="#">Cyber Security <span class="material-symbols-outlined" style="font-size: 1em;">
+                    link
+                    </span></a></li>
+                  <li><a href="#">Game Development <span class="material-symbols-outlined" style="font-size: 1em;">
+                    link
+                    </span></a></li>
+                  <li><a href="#">Programming Languages <span class="material-symbols-outlined" style="font-size: 1em;">
+                    link
+                    </span></a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="MNBSN_Menu">
+            <div class="MNBSN_SubMenuBoxToggler" onclick="toggleSideNavigationSubMenu(this);">
+            <span>Resources</span>
+            <span class="material-symbols-outlined MNBSN_DropdownIcon">
+              arrow_drop_down
+              </span>
+            </div>
+            <div class="MNBSN_SubMenuBox">
+              <a href="#">All Resources <span class="material-symbols-outlined" style="font-size: 1em;">
+                open_in_new
+                </span></a>
+              <ul class="MNBSN_SubMenuP1 MNBSN_SubMenuP">
+                <li>Arcore Resources</li>
+                  <li><a href="#">Notes <span class="material-symbols-outlined" style="font-size: 1em;">
+                    link
+                    </span></a></li>
+                <li><a href="#">eBooks <span class="material-symbols-outlined" style="font-size: 1em;">
+                  link
+                  </span></a></li>
+                <li><a href="#">Projects <span class="material-symbols-outlined" style="font-size: 1em;">
+                  link
+                  </span></a></li>
+              </ul>
+              <ul class="MNBSN_SubMenuP2 MNBSN_SubMenuP">
+                <li>External Resources</li>
+                  <li><a href="#">GUVI - Learning Application <span class="material-symbols-outlined" style="font-size: 1em;">
+                    link
+                    </span></a></li>
+                <li><a href="#">W3Schools - Learning Website <span class="material-symbols-outlined" style="font-size: 1em;">
+                  link
+                  </span></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="MNBSN_Menu" style="border-bottom: 1px solid #0055ff">
+            <div class="MNBSN_SubMenuBoxToggler" onclick="toggleSideNavigationSubMenu(this);">
+            <span>Explore</span>
+            <span class="material-symbols-outlined MNBSN_DropdownIcon">
+              arrow_drop_down
+              </span>
+            </div>
+            <div class="MNBSN_SubMenuBox">
+              <a href="#">Arcore And MANAGE <span class="material-symbols-outlined" style="font-size: 1em;">
+                open_in_new
+                </span></a>
+              <ul class="MNBSN_SubMenuP1 MNBSN_SubMenuP">
+                <li>Arcore</li>
+                  <li><a href="#">Projects under Arcore <span class="material-symbols-outlined" style="font-size: 1em;">
+                    link
+                    </span></a></li>
+                <li><a href="#">Owner of Arcore <span class="material-symbols-outlined" style="font-size: 1em;">
+                  link
+                  </span></a></li>
+              </ul>
+              <ul class="MNBSN_SubMenuP2 MNBSN_SubMenuP">
+                <li>MANAGE</li>
+                  <li><a href="#">Projects under MANAGE <span class="material-symbols-outlined" style="font-size: 1em;">
+                    link
+                    </span></a></li>
+                <li><a href="#">Owner of MANAGE <span class="material-symbols-outlined" style="font-size: 1em;">
+                  link
+                  </span></a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="MNBSN_ButtonBox">
+            <button>BLOG</button>
+          </div>
+        </div>
+
+        <div id="MNBSN_Overlay"></div>
+      </nav>
+    </header>
+  </body>
 </html>
