Linked Main_Navigation_Bar.js

--- a/index.html
+++ b/index.html
@@ -302,5 +302,7 @@
         <div id="MNBSN_Overlay"></div>
       </nav>
     </header>
+
+    <script src="Main_Navigation_Bar.js"></script>
   </body>
 </html>
