Added description, keywords, navigation bar logo, canonical, robots tag

--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- SEO Meta Tags -->
-<!--     <meta name="description" content="Brief description of your website or page for search engines."> -->
-<!--     <meta name="keywords" content="keywords, describing, your, website, for, SEO"> -->
-    <meta name="author" content="Vishal Singh Rajawat">
-    <meta name="author" content="Arcore">
-    <meta name="copyright" content="Vishal Singh Rajawat">
-    <meta name="copyright" content="Arcore">
+    <meta name="description" content="Welcome to Arcore created Computer Science study path, your ultimate guide to mastering computer science. This site offer a comprehensive, well-structured path designed to help you become a computer scientist. Whether you're a beginner or looking to deepen your knowledge, you'll find detailed study plans, curated resources, and in-depth notes to guide you through every step of the journey. Start learning today and turn your passion for computer science into expertise" />
+    <meta name="keywords" content="Computer Science Study Guide, Become a Computer Scientist, Computer Science Learning Path, Study Plans for Computer Science, Computer Science Resources, Computer Science Notes, Learn Computer Science Online, CS Study Roadmap, Comprehensive Computer Science Guide, Online Computer Science Tutorials, Self-taught Computer Scientist, Computer Science Curriculum, Master Computer Science, Coding and Computer Science" />
+    <meta name="author" content="Vishal Singh Rajawat" />
+    <meta name="author" content="Arcore" />
+    <meta name="copyright" content="Vishal Singh Rajawat" />
+    <meta name="copyright" content="Arcore" />
+    <meta name="robots" content="index, follow" />
 
     <!-- Social Media Meta Tags (Open Graph for Facebook, LinkedIn, etc.) -->
 <!--     <meta property="og:title" content="Your Page Title"> -->
@@ -27,12 +28,14 @@
 <!--     <meta name="twitter:image" content="https://www.yourwebsite.com/image.jpg"> -->
 
     <!-- Favicon -->
-    <link rel="icon" href="Arcore_Learn_Computers.webp" type="image/webp">
+    <link rel="icon" href="Arcore_Learn_Computers.webp" type="image/webp" />
 
+    <!-- Canonical Link -->
+    <link rel="canonical" href="https://vsr-arcore.github.io/Learn-Computer-Science/" />
     <!-- Link to CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <!-- Link to Navigation Bar CSS -->
-    <link rel="stylesheet" href="Main_Navigation_Bar.css">
+    <link rel="stylesheet" href="Main_Navigation_Bar.css" />
 
     <!-- Google Fonts Icons-Static -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
@@ -45,7 +48,7 @@
     <header>
       <nav id="Main_Navigation_Bar">
         <div id="MNB_LogoBox">
-          <img src="https://vsr-arcore.github.io/Computers-Study/ARCORE-LOGO-1.webp" alt="Main Navigation Bar Logo" style="width: 60px; height: 60px; border-radius: 50%;" />
+          <img src="Arcore_Learn_Computers.webp" alt="Main Navigation Bar Logo" style="width: 60px; height: 60px; border-radius: 50%;" />
         </div>
 
         <div id="MNB_TitleBox">
