Correction: Underlines in submenu of sidebar

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               home
               </span></a>
             </div>            
-            <div class="MNBSN_Menu">
+            <div class="MNBSN_Menu" style="border-bottom: 1px solid #0055ff">
               <div class="MNBSN_SubMenuBoxToggler" onclick="toggleSideNavigationSubMenu(this);">
               <span>Notes</span>
               <span class="material-symbols-outlined MNBSN_DropdownIcon">
@@ -232,7 +232,7 @@
               </div>
             </div>
           </div>
-          <div class="MNBSN_Menu">
+          <div class="MNBSN_Menu" style="border-bottom: 1px solid #0055ff">
             <div class="MNBSN_SubMenuBoxToggler" onclick="toggleSideNavigationSubMenu(this);">
             <span>Resources</span>
             <span class="material-symbols-outlined MNBSN_DropdownIcon">
